1998-05-04  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* prop.c (prop_apply): Only run the apply code once.

1998-05-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-day-panel.c (update): Draw the day at startup. 
	(gncal_day_panel_set): Fix selected-day display. 
	(gncal_day_panel_new): Switch day on double clicks, not on single
	clicks. 

	* calobj.c (ical_object_compute_end): Removed debug messages. 

1998-04-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* prop.c (prop_apply): Do not call prop_cancel, ths is now using
	GnomePropertyDialog. 

1998-04-29  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-week-view.c (sync_week): Use gnome_calendar_tag_calendar.

	* gnome-cal.c (gnome_calendar_tag_calendar): New routine used to
	fill a gtk_calendar with the events on a GnomeCalendar object.

	* gncal-week-view.c (gncal_week_view_new): Set the week to the day
	we double clicked. 

1998-04-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-cal.c (calendar_notify): Apply black magic to get mail
	notifications to work. 

	* gncal-full-day.c (child_focus_out): Temporary optimization, the
	child_focus_out is constantly calling the
	gnome_calendar_object_changed when the property editor has been
	invoked.  This happens every time the mouse moves crosses the main
	window.

	* calendar.c (calendar_object_changed): Reschedule alarms when a
	calendar object has changed its times.

Sat Apr 25 22:20:45 1998  Havoc Pennington  <hp@pobox.com>

	* eventedit.c, eventedit.h: Descend from GnomeDialog. Took vbox
	out of class structure; use GnomeDialog vbox
	instead. gnome_dialog_set_destroy instead of destroying in button
	callbacks. Don't create buttons, separator, or vbox manually. 
	#include <libgnomeui/gnome-dialog.h>.

1998-04-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* calobj.c (ical_object_create_from_vobject): Fixed alarm loading;
	Load snooze time and snooze count

1998-04-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>
